Added a basic three.js scene.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Insert Title Name Here</title>
-        <link rel="stylesheet" href="boilerplate.css">
-        <script src="boilerplate.js"></script>
+        <link rel="stylesheet" href="./src/css/large-style.css">
+        <script type="module" src="./src/js/index.js"></script>
     </head>
     <body>
         <header></header>
         <main>
-            <section></section>
+            <section>
+                <div id="scene-container"></div>
+            </section>
         </main>
         <footer></footer>
     </body>
