Added buttons and event listeners

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <main>
             <section>
                 <div id="scene-container"></div>
+                <div id="overlay">
+                    <button id="prevBtn">&lt;</button>
+                    <button id="nextBtn">&gt;</button>
+                </div>
             </section>
         </main>
         <footer></footer>
