--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Insert Title Name Here</title>
+        <title>Solar System</title>
         <link rel="stylesheet" href="./src/css/large-style.css">
         <script type="module" src="./src/js/index.js"></script>
     </head>
@@ -14,7 +14,7 @@
                 <div id="scene-container"></div>
                 <div id="overlay">
                     <button id="prevBtn">&lt;</button>
-                    <h1></h1>
+                    <h1 id="main-heading"></h1>
                     <button id="nextBtn">&gt;</button>
                 </div>
             </section>
